--- a/src/components/Form.css
+++ b/src/components/Form.css
@@ -1,22 +1,34 @@
 /* src/Form.css */
 .form-container {
-    max-width: 100%;
-    margin: 0 auto;
-    padding: 20px;
+    max-width: 60%;
+    margin: 80px auto;
+    padding: 20px 25px;
     background-color: #f5f5f5;
     border-radius: 10px;
     box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
    
   }
+
+  .cross{
+   padding-right: 5px;
+  }
+
+  .error-message{
+    color: red;
+    font-size: 15px;
+  }
   
   .form-heading {
-    font-size: 24px;
+    font-size: 28px;
     margin-bottom: 20px;
     color: #333;
   }
   
+  .form-label{
+    font-size: 18px;
+  }
   .form-group {
-    margin-bottom: 2px;
+    margin-bottom: 3px;
   }
   
   .form-label {
@@ -32,6 +44,7 @@
     padding: 10px;
     border: 1px solid #ccc;
     border-radius: 5px;
+    font-size: 15px;
   }
   
   .form-select {
@@ -40,6 +53,7 @@
     background-repeat: no-repeat;
     background-position: right 10px center;
     background-size: 12px;
+    font-size: 15px;
   }
   
   .form-button {
@@ -47,11 +61,35 @@
     background-color: #007bff;
     color: #fff;
     border: none;
-    border-radius: 5px;
+    border-radius: 10px;
     cursor: pointer;
+    font-size: 20px;
+    margin-top: 3%;
   }
   
   .form-button:hover {
     background-color: #0056b3;
   }
   
+
+  .form-button2 {
+    padding: 10px 20px;
+    background-color: #ff0000;
+    color: #fff;
+    border: none;
+    border-radius: 10px;
+    cursor: pointer;
+    font-size: 20px;
+    margin-top: 3%;
+  }
+  
+  .form-button2:hover {
+    background-color: #de3202;
+  }
+  
+
+  .button-container {
+    display: flex;
+    justify-content: center;
+    gap: 40px; /* Adjust the space between buttons as needed */
+  }
